# AsciiSpaceDestroyer

./: .gitignore  Ally.cpp  Ally.h  CMakeLists.txt  FindSDL.cmake  FindSDL_gfx.cmake  Foe.cpp  Foe.h  Game.cpp  Game.h  HitManager.cpp  HitManager.h  README.md  Score.cpp  Shot.cpp  Shot.h  SpaceShip.cpp  SpaceShip.h  WaveManager.cpp  WaveManager.h  main.cpp  makefile
Control/: Input.cpp  Input.h
Resources/Levels/: index.txt  notice.txt
Resources/Saves/: Albane.txt  Ancestor.txt  Carl.txt  Elric.txt  Joueur1.txt  Joueur2.txt  Jovian.txt  LocalTestRegularPlayer.txt  Margot.txt  Nathan.txt  Robot.txt  index.txt  notice.txt
Resources/Ships/: Albanator.txt  BCruiser.txt  BFront.txt  BLander.txt  BadassLauncher.txt  Bloc10.txt  Boom.txt  Bossloss.txt  Chronotron.txt  CleanThemAll.txt  Defender.txt  Divider.txt  GreatFox.txt  Insider.txt  Jumper.txt  LightBeam.txt  MSpear.txt  Miner.txt  MiniFZ.txt  Nanostray.txt  Nawak.txt  Nevada.txt  NeverBreak.txt  Noeil.txt  Nope.txt  Nordon.txt  Nosmo.txt  Percor.txt  Saucisseur.txt  Slasher.txt  SuperNordon.txt  Sword.txt  TorpEL.txt  TorpML.txt  Triton.txt  Upgraded.txt  X303.txt  Zinger.txt  index.txt
SDL_GFX/: SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  SDL_rotozoom.c  SDL_rotozoom.h
Shot/: Brexit.h  Cutter.cpp  Cutter.h  Disper.cpp  Disper.h  Gun.cpp  Gun.h  Hecto.h  Missile.cpp  Part.cpp  Photo.cpp  Sniper.cpp  Sniper.h
src/: Game.h  HitManager.h  Score.h  Shot.h
src/Control/: Input.cpp  Input.h  InputAndJoy.cpp  InputAndJoy.h
src/Shot/: Brexit.cpp  Part.h  (+3 more)
(+115 files in other folders)
